syntax = "proto3";
package kvstore.kvstore;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "kvstore/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "kvstore/x/kvstore/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/kvstore/kvstore/params";
  }
  // Queries a list of GetValue items.
	rpc GetValue(QueryGetValueRequest) returns (QueryGetValueResponse) {
		option (google.api.http).get = "/kvstore/kvstore/get_value/{key}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetValueRequest {
  string key = 1;
}

message QueryGetValueResponse {
  string value = 1;
}

// this line is used by starport scaffolding # 3
